# oam_flux

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: deploy_hf_space.sh  run_coupling_demo.py  run_eddington_probe.py  run_emergence_probes.py  run_vqc_coupling_demo.py  sync_hf_space.sh
space/oam_flux/: README.md  app.py  build_info.py  demo_core.py  requirements.txt
space/oam_flux/oam_flux/: __init__.py  back_reaction.py  constants.py  coupling.py  dose_equivalence.py  eddington.py  emergence.py  helix_viz.py  lattice.py  momentum.py  photon.py  pulse_envelope.py  pulse_train.py  vqc_coupling.py  vqc_photonics.py
src/oam_flux/: __init__.py  coupling.py  flux_deposit.py  helix_viz.py  lattice.py  momentum.py  photon.py  pulse_stats.py  pulse_train.py  vqc_coupling.py  vqc_photonics.py
tests/: test_back_reaction.py  test_constants.py  test_dose_equivalence.py  test_eddington.py  test_emergence.py  test_exponential_recovery.py  test_helix_viz.py  test_momentum.py  test_pulse_envelope.py  test_pulse_stats.py  test_pulse_train.py  test_recovery.py  test_vqc_photonics.py
